Revert "Add very small margin to the top and bottom of paragraphs to prevent cutoffs"
This reverts commit 8b2883e395b75a6ed1684b8c428adba38e51b32e.

--- a/src/modules/list-view-repeater/list-view-repeater.component.scss
+++ b/src/modules/list-view-repeater/list-view-repeater.component.scss
@@ -58,10 +58,7 @@
     }
 
     /deep/ p {
-      margin-top: 1px;
-      margin-bottom: 1px;
-      margin-left: 0;
-      margin-right: 0;
+      margin: 0;
     }
 
     /deep/ .sky-chevron {
